# mobile-money-payments-sdk

./: README.md  airtel_client.py  config.py  mtn_client.py  payment_clients.py  pyproject.toml  requirements.txt  test_airtel_client.py  test_mtn_client.py
.github/workflows/: python-app.yml
