[tool.poetry]
name = "my_sdk"
version = "0.1.0"
description = "My Company's SDK for MTN and Airtel Clients"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"